# duckdb_joins

./: .gitignore  CMakeLists.txt
src/execution/: physical_plan_generator.cpp
src/execution/physical_plan/: plan_comparison_join.cpp
src/include/duckdb/execution/operator/learned_join/: duckdb_sstable.hpp  duckdb_sstable_builder.hpp  duckdb_sstable_iterator.hpp
src/include/duckdb/execution/operator/learned_join/algos/: base_merge_and_join_op.hpp  hash_join.hpp  partition.hpp  sort_join.hpp  table_op.hpp
src/include/duckdb/execution/operator/learned_join/benchmark/: dataset.h  runner.h  synthetic.h
src/include/duckdb/execution/operator/learned_join/indexes/: btree_index.h  one_level_pgm_index.h  pgm_index.h
src/include/duckdb/execution/operator/learned_join/interfaces/: comparator.hpp  index.hpp  iterator.hpp  key_to_point.h  sstable.hpp
src/include/duckdb/execution/operator/learned_join/sstable/: key_value_slice.hpp
test/: CMakeLists.txt
test/custom_joins/: CMakeLists.txt  test_custom_join.cpp
